update to github document

--- a/class06/class06.Rmd
+++ b/class06/class06.Rmd
@@ -2,7 +2,7 @@
 title: 'Class 6: R Functions'
 author: 'Shitian Li (PID: A13294481)'
 date: "10/15/2021"
-output: pdf_document
+output: github_document
 ---
 
 ## Quick Rmarkdown intro
